Fix saving of paragraphs missed saving the formatting of framents where the block have more properties (non style) than the fragment

Took the opotunity to implement autoStyle method in KoCharacterStyle as
a followup on the style inheritance I did a couple of weeks ago

BUG:260115